# stripe-sdk-rust

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
src/: client.rs  error.rs  lib.rs  operations.rs  request.rs
translations/ja/: README.md
