[package]
name = "stripe-sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for working with the Stripe API"
license = "MIT"

[dependencies]
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[build-dependencies]
serde_json = "1"
