[package]
name = "stripe-sdk"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Rust SDK for working with the Stripe API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/finitefield-org/stripe-sdk-rust"
homepage = "https://github.com/finitefield-org/stripe-sdk-rust"
documentation = "https://docs.rs/stripe-sdk"
keywords = ["stripe", "sdk", "api", "payments"]
categories = ["api-bindings", "web-programming::http-client"]
include = [
    "/src/**",
    "/build.rs",
    "/spec/openapi.spec3.json",
    "/README.md",
    "/LICENSE",
    "/Cargo.toml",
]

[dependencies]
hmac = "0.12"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = "2"

[build-dependencies]
serde_json = "1"
